--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -38,8 +40,6 @@
     ]
   },
   "devDependencies": {
-    "file-loader": "^6.2.0",
-    "font-awesome": "^4.7.0",
-    "url-loader": "^4.1.1"
+    "font-awesome": "^4.7.0"
   }
 }
