--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scrollspy": "^3.4.3",
     "redux": "^4.0.5",
     "url-loader": "^3.0.0",
     "web-vitals": "^1.1.0"
